--- a/Dev/css/styles.css
+++ b/Dev/css/styles.css
@@ -10,6 +10,41 @@ div.navbarBackground {
 	z-index: 950;
 }
 
+div.logo {
+	position: absolute;
+	top: 53px;
+	left: 32px;
+	width: 205px;
+	height: 60px;
+	padding: 0px;
+	/*
+	margin-top: 53px;
+	margin-left: 32px;
+	*/
+}
+
+div.icon-hourglass {
+	content: url('../img/Hourglass@2x.png');
+	width: 60px;
+	height: 60px;
+	padding: 0px;
+	margin: 0px;
+}
+
+div.text-hourglass {
+	overflow: hidden;
+	margin: 0px;
+	padding: 0px;
+	position: absolute;
+	top: 13px;
+	left: 75px;
+	font-family: "Courier";
+	font-size: 24px;
+	font-weight: bold;
+	color: #174C4F;
+}
+
+
 div.topImg {
 	position:absolute;
 	top: 0px;
